syntax = "proto3";

package pb;

option go_package = "go-todolist-grpc/api/pb";

message CreateTaskRequest {
    int32 category_id = 1;
    string title = 2;
    optional string note = 3;
    optional string url = 4;
    optional int64 specify_datetime = 5;
    int32 priority = 6;
}

message GetTaskRequest {
    int32 id = 1;
}

message ListTaskRequest {
    int32 page = 1;
    int32 page_size = 2;
    optional string sort_by = 3;
    optional int32 task_id = 4;
    optional int32 category_id = 5;
    optional string title = 6;
    optional bool is_specify_time = 7;
    optional int32 priority = 8;
    optional bool is_complete = 9;
}

message UpdateTaskRequest {
    int32 id = 1;
    optional int32 category_id = 2;
    optional string title = 3;
    optional string note = 4;
    optional string url = 5;
    optional int64 specify_datetime = 6;
    optional int32 priority = 7;
    optional bool is_complete = 8;
}
  
  message DeleteTaskRequest {
    int32 id = 1;
}
